--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "wisnet/behatpom",
     "description": "BDD, Behat, Mink, Selenium, Page Object Models, Framework"
     "type": "project",
+    "license": "MIT",    
     "require": {
 	"behat/behat": "~3.1",
 	"sensiolabs/behat-page-object-extension": "~2.1",
@@ -17,8 +18,9 @@
 	"zordius/lightncandy": "1.2.2",	
 	"psy/psysh": "^0.8.15"
     } ,
-    "bin": ["src/bin/preprocessGherkin",
-	    "src/bin/buildCBTTests"
+    "bin": [
+	"src/bin/preprocessGherkin",
+	"src/bin/buildCBTTests"
 	   ],    
     "autoload": {
         "psr-4": {
