--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"behat/behat": "~3.1",
 	"sensiolabs/behat-page-object-extension": "~2.1",
 	"behat/mink-extension": "~2.3",	
-	"facebook/webdriver": "dev-w3c",
+	"facebook/webdriver": "^1.5",
 	"behat/mink-selenium2-driver": "^1.3",
 	"phpspec/phpspec": "^4.3",
 	"se/selenium-server-standalone": "^3.10",
@@ -26,11 +26,5 @@
         "psr-4": {
             "Wisnet\\BehatPom\\": "src/behatPOM/"
         }
-    },
-    "repositories": [
-	{
-	    "type": "git",
-	    "url": "https://github.com/mpierzchalski/php-webdriver.git"
-	}
-    ]
+    }
 }
