--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "project",
     "license": "MIT",    
     "require": {
+	"php": ">=7.0.21",
 	"behat/behat": "~3.1",
 	"sensiolabs/behat-page-object-extension": "~2.1",
 	"behat/mink-extension": "~2.3",	
@@ -11,7 +12,7 @@
 	"behat/mink-selenium2-driver": "^1.3",
 	"phpspec/phpspec": "^4.3",
 	"se/selenium-server-standalone": "^3.10",
-	"phpunit/phpunit": "^6.0",
+	"phpunit/phpunit": "^6.0|^7.0",
 	"phpunit/phpcov": "^4.0",
 	"phpunit/php-code-coverage": "^5.0",
 	"php-ds/php-ds": "^1.2",
