--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 	"phpspec/phpspec": "^4.3",
 	"se/selenium-server-standalone": "^3.10",
 	"phpunit/phpunit": "^6.0|^7.0",
-	"phpunit/phpcov": "^4.0",
-	"phpunit/php-code-coverage": "^5.0",
+	"phpunit/phpcov": "^4.0|^5.0",
+	"phpunit/php-code-coverage": "^5.0|^6.0",
 	"php-ds/php-ds": "^1.2",
 	"zordius/lightncandy": "1.2.2",	
 	"psy/psysh": "^0.8.15"
