--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
 	"php": ">=7.0.21",
 	"behat/behat": "~3.1",
+        "chekote/behat-retry-extension": "^1.0",		
 	"sensiolabs/behat-page-object-extension": "~2.1",
 	"behat/mink-extension": "~2.3",	
 	"facebook/webdriver": "^1.5",
@@ -18,6 +19,7 @@
 	"php-ds/php-ds": "^1.2",
 	"zordius/lightncandy": "1.2.2",	
 	"psy/psysh": "^0.8.15"
+
     } ,
     "bin": [
 	"src/bin/preprocessGherkin",
