--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,21 @@
     "require": {
 	"php": ">=7.0.21",
 	"behat/behat": "~3.1",
-        "chekote/behat-retry-extension": "^1.0",		
-	"sensiolabs/behat-page-object-extension": "~2.1",
-	"behat/mink-extension": "~2.3",	
+	"behat/mink-extension": "~2.3",
+	"behat/mink-selenium2-driver": "^1.3",	
+        "bex/behat-screenshot": "^1.2",
+        "chekote/behat-retry-extension": "^1.0",
 	"facebook/webdriver": "^1.5",
-	"behat/mink-selenium2-driver": "^1.3",
-	"phpspec/phpspec": "^4.3",
-	"se/selenium-server-standalone": "^3.10",
+	"phpspec/phpspec": "^4.3",	
 	"phpunit/phpunit": "^6.0|^7.0",
 	"phpunit/phpcov": "^4.0|^5.0",
 	"phpunit/php-code-coverage": "^5.0|^6.0",
 	"php-ds/php-ds": "^1.2",
-	"zordius/lightncandy": "1.2.2",	
-	"psy/psysh": "^0.8.15"
-
-    } ,
+	"psy/psysh": "^0.8.15",
+	"se/selenium-server-standalone": "^3.10",
+	"sensiolabs/behat-page-object-extension": "~2.1",	
+	"zordius/lightncandy": "1.2.2"
+    },
     "bin": [
 	"src/bin/preprocessGherkin",
 	"src/bin/buildCBTTests"
